htmf/src/snapshots/htmf__tests__declare_list.snap
---
source: htmf/src/lib.rs
expression: html
---
<!DOCTYPE html>
<html class="w-full h-full">
  <head>
    <link rel="stylesheet" href="/assets/preflight.css" />
    <link rel="stylesheet" href="/assets/railwind.css" />
    <script src="/assets/htmx.1.9.9.js"></script>
    <meta name="color-scheme" content="dark" />
    <meta name="viewport" content="width=device-width,initial-scale=1" />
  </head>
  <body class="w-full h-full text-gray-200 bg-neutral-800">
    <p>bonjour</p>
    <div></div>
    <label class="mt-4 text-neutral-400" for="credentials[password]"
    >Password</label>
    <input
      type="password"
      name="credentials[password]"
      class="rounded py-1.5 px-3 mt-2 bg-neutral-900"
      required="true"
    />
  </body>
</html>
